crates/vize/tests/snapshots/integration__check_cli__check_json_reports_type_errors_via_project_typechecker.snap
---
source: crates/vize/tests/check_cli.rs
assertion_line: 42
expression: "serde_json::to_string_pretty(&snapshot).unwrap()"
---
{
  "diagnostics": [
    "error:2:7 [TS2322] Type 'number' is not assignable to type 'string'."
  ],
  "errorCount": 1,
  "fileCount": 1,
  "status": 1
}
